<resources>
    <string name="app_name">CalculosFiguras</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="circulo">Circulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="cubo">Cubo</string>
    <string name="figuras">Figuras Geométricas</string>
    <string name="calculos">Cálculos</string>
    <string name="calcular">Calcular</string>
    <string name="perimetro">Perimetro</string>
</resources>
