<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray"
    tools:context="com.danielcampu.calculosfiguras.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculos"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/rCuadrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuadrado"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rCirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rCubo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cubo"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tParametro1"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eParametro1"
        android:inputType="number|numberDecimal"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tParametro2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eParametro2"
        android:inputType="number|numberDecimal"
        android:visibility="invisible"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/calcular"
        android:background="@color/orange"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="onButtonClicked"/>

    <LinearLayout
        android:layout_marginTop="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/tTextoValor1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/tValorValor1"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/tTextoValor2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/tValorValor2"/>


    </LinearLayout>


</LinearLayout>
